docs/api/qiskit/0.19/qiskit.transpiler.passes.Width.mdx
---
title: Width (v0.19)
description: API reference for qiskit.transpiler.passes.Width in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Width
---

# Width

<Class id="qiskit.transpiler.passes.Width" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/analysis/width.py" signature="Width(*args, **kwargs)" modifiers="class">
  Calculate the width of a DAG circuit.

  The result is saved in `property_set['width']` as an integer that contains the number of qubits + the number of clbits.

  ## Attributes

  <span id="width-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.Width.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="width-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.Width.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="width-name" />

  ### name

  <Function id="qiskit.transpiler.passes.Width.name" signature="Width.name()">
    Return the name of the pass.
  </Function>

  <span id="width-run" />

  ### run

  <Function id="qiskit.transpiler.passes.Width.run" signature="Width.run(dag)">
    Run the Width pass on dag.
  </Function>
</Class>

